tdf#166953 writerfilter: add column width when adding extra cell

It's not so obvious how the cell widths are set...

1. The table gets USHRT_MAX as initial width
2. All the cells in the table get USHRT_MAX/nCells as initial width
   (this is SwFrameSizeItem in box item set)
3. Table property "Width" is set -> this scales all the box widths
4. Row property "TableColumnSeparators" is set; this is *relative* widths
   to a hard-coded value of TableColumnRelativeSum=10000

Evidently the result is bad if the number of separators is too low.

(regression from commit 038473595ed266d15a788d8f97781cbaf066cfe7)

Change-Id: Ie71889a074bff43d8f0c34ccefb4d30ed0a9f0c0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188153
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>